implemented non-reactive j-if directive

--- a/src/assets/style/_main.scss
+++ b/src/assets/style/_main.scss
@@ -1,10 +1,10 @@
-$color: orange;
+// $color: orange;
 
-p {
-  color: $color;
-}
+// p {
+//   color: $color;
+// }
 
-div {
-  color: blue
-}
+// div {
+//   color: blue
+// }
 
