--- a/src/assets/style/_main.scss
+++ b/src/assets/style/_main.scss
@@ -1,10 +1,3 @@
-// $color: orange;
-
-// p {
-//   color: $color;
-// }
-
-// div {
-//   color: blue
-// }
-
+@import './variables';
+@import './elements';
+@import './utils/index'
